repair main delete debug info